--- a/7/lib/sparky-aptus-appcenter/games-tools.html
+++ b/7/lib/sparky-aptus-appcenter/games-tools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 5, 2021 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Tools | APTus AppCenter</title>
@@ -82,6 +82,8 @@ Last update: December 5, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamtoo_sc-controller" class="button1"><img src="images/joystick.svg" class="appicon"><br />SC Controller</a>
+		</td>
 		<td><a href="aptus://gamtoo_sparky-ia" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky IA</a>
 		</td>
 		<td><a href="aptus://gamtoo_steam" class="button1"><img src="images/steam.svg" class="appicon"><br />Steam</a>
