--- a/7/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -58,18 +58,18 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
 		</td>
+		<td><a href="aptus://vidpla_haruna" class="button1"><img src="images/totem.svg" class="appicon"><br />Haruna</a>
+		</td>
 		<td><a href="aptus://vidpla_hypnotix" class="button1"><img src="images/totem.svg" class="appicon"><br />Hypnotix</a>
 		</td>
 		<td><a href="aptus://vidpla_kodi" class="button1"><img src="images/totem.svg" class="appicon"><br />Kodi</a>
 		</td>
-		<!--<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
-		</td>-->
 		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
-		</td>
-		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
+		</td>
 		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
 		</td>
 		<td><a href="aptus://vidpla_popcorn-time" class="button1"><img src="images1/popcorntime.svg" class="appicon"><br />Popcorn Time</a>
@@ -81,10 +81,10 @@ Last update: November 12, 2022 by pavroo
 
 		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
 		</td>
-		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
+		</td>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
 		</td>
 		<td><a href="aptus://vidpla_totem" class="button1"><img src="images/totem.svg" class="appicon"><br />Totem</a>
