--- a/6/lib/sparky-aptus-appcenter/games-tools.html
+++ b/6/lib/sparky-aptus-appcenter/games-tools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Tools | APTus AppCenter</title>
@@ -83,6 +83,8 @@ Last update: June 13, 2021 by pavroo
 	</tr>
 	<tr>
 		<td><a href="aptus://gamtoo_residualvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ResidualVM</a>
+		</td>
+		<td><a href="aptus://gamtoo_sc-controller" class="button1"><img src="images/joystick.svg" class="appicon"><br />SC Controller</a>
 		</td>
 		<td><a href="aptus://gamtoo_sparky-ia" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky IA</a>
 		</td>
