--- a/6/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/6/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 28, 2022 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -90,12 +90,14 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
 		</td>
-		<td><a href="aptus://audpla_jampal" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jampal</a>
+		<td><a href="aptus://audpla_harmonoid" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Harmonoid</a>
 		</td>
-		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
+		<td><a href="aptus://audpla_jampal" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jampal</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
+		</td>
 		<td><a href="aptus://audpla_lollypop" class="button1"><img src="images/lollypop.svg" class="appicon"><br />Lollypop</a>
 		</td>
 		<td><a href="aptus://audpla_lxmusic" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LXMusic</a>
@@ -106,10 +108,10 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
 		</td>
-		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
+		</td>
 		<td><a href="aptus://audpla_nuclear" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Nuclear</a>
 		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
@@ -120,10 +122,10 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
-		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
+		</td>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
 		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
@@ -134,10 +136,10 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
 		</td>
-		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
+		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
 		</td>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
@@ -148,10 +150,10 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
-		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
+		</td>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
 		</td>
 	</tr>
