--- a/6/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/6/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 29, 2022 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -56,6 +56,8 @@ Last update: May 29, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
 		</td>
+		<td><a href="aptus://vidpla_haruna" class="button1"><img src="images/totem.svg" class="appicon"><br />Haruna</a>
+		</td>
 		<td><a href="aptus://vidpla_hypnotix" class="button1"><img src="images/totem.svg" class="appicon"><br />Hypnotix</a>
 		</td>
 		<td><a href="aptus://vidpla_kmplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />KMPlayer</a>
@@ -64,10 +66,10 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
 		</td>
-		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
+		</td>
 		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
 		</td>
 		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
@@ -78,10 +80,10 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_rage" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Rage</a>
 		</td>
-		<td><a href="aptus://vidpla_smplayer" class="button1"><img src="images/smplayer.svg" class="appicon"><br />SMPlayer</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_smplayer" class="button1"><img src="images/smplayer.svg" class="appicon"><br />SMPlayer</a>
+		</td>
 		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
 		</td>
 		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
@@ -92,10 +94,10 @@ Last update: May 29, 2022 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_vlc" class="button1"><img src="images/vlc.svg" class="appicon"><br />VLC</a>
 		</td>
-		<td><a href="aptus://vidpla_xine-console" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-console</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_xine-console" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-console</a>
+		</td>
 		<td><a href="aptus://vidpla_xine-ui" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-ui</a>
 		</td>
 	</tr>
