--- a/7/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 28, 2022 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -82,6 +82,8 @@ Last update: September 28, 2022 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_shellinabox" class="button1"><img src="images/terminal.svg" class="appicon"><br />Shellinabox</a>
+		</td>
 		<td><a href="aptus://accter_spterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />SPterm</a>
 		</td>
 		<td><a href="aptus://accter_stterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />STterm</a>
@@ -92,10 +94,10 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accter_termit" class="button1"><img src="images/terminal.svg" class="appicon"><br />Termit</a>
 		</td>
-		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
+		</td>
 		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
 		</td>
 		<td><a href="aptus://accter_xfce4-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Xfce4 Terminal</a>
