--- a/7/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -86,6 +86,8 @@ Last update: November 12, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
+		<td><a href="aptus://audpla_harmonoid" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Harmonoid</a>
+		</td>
 		<td><a href="aptus://audpla_jampal" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jampal</a>
 		</td>
 		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
@@ -94,10 +96,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
 		</td>
-		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
+		</td>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
 		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
@@ -108,10 +110,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
 		</td>
-		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
+		</td>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
@@ -122,10 +124,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
 		</td>
-		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
+		</td>
 		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
 		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
@@ -136,10 +138,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
-		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
+		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
