--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: January 8, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -84,8 +84,6 @@ Last update: November 12, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
 		</td>
-		<td><a href="aptus://netcom_lostirc" class="button1"><img src="images/irc.svg" class="appicon"><br />LostIRC</a>
-		</td>
 		<td><a href="aptus://netcom_mumble" class="button1"><img src="images/im.svg" class="appicon"><br />Mumble</a>
 		</td>
 		<td><a href="aptus://netcom_nheko" class="button1"><img src="images/im.svg" class="appicon"><br />Nheko</a>
@@ -94,10 +92,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
 		</td>
 		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
@@ -108,10 +106,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netcom_signal-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Signal Desktop</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_teams" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams</a>
 		</td>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
@@ -122,9 +120,11 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
 		</td>
+		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
+		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netcom_tkabber" class="button1"><img src="images/im.svg" class="appicon"><br />Tkabber</a>
+		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
 		</td>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
