--- a/6/lib/sparky-aptus-appcenter/games-text.html
+++ b/6/lib/sparky-aptus-appcenter/games-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Text | APTus AppCenter</title>
@@ -58,16 +58,18 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamtex_cavepacker" class="button1"><img src="images/gnect.svg" class="appicon"><br />CavePacker</a>
 		</td>
+		<td><a href="aptus://gamtex_cavezofphear" class="button1"><img src="images/terminal.svg" class="appicon"><br />CAVEZ of PHEAR</a>
+		</td>
 		<td><a href="aptus://gamtex_crawl" class="button1"><img src="images/terminal.svg" class="appicon"><br />Crawl</a>
 		</td>
 		<td><a href="aptus://gamtex_crazywa" class="button1"><img src="images/terminal.svg" class="appicon"><br />CrazyWa</a>
 		</td>
 		<td><a href="aptus://gamtex_freesweep" class="button1"><img src="images/terminal.svg" class="appicon"><br />Freesweep</a>
 		</td>
-		<td><a href="aptus://gamtex_gearhead2" class="button1"><img src="images/terminal.svg" class="appicon"><br />GearHead 2</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamtex_gearhead2" class="button1"><img src="images/terminal.svg" class="appicon"><br />GearHead 2</a>
+		</td>
 		<td><a href="aptus://gamtex_greed" class="button1"><img src="images/terminal.svg" class="appicon"><br />Greed</a>
 		</td>
 		<td><a href="aptus://gamtex_lambdahack" class="button1"><img src="images/terminal.svg" class="appicon"><br />LambdaHack</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamtex_ninvaders" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ninvaders</a>
 		</td>
-		<td><a href="aptus://gamtex_nsnake" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nsnake</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamtex_nsnake" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nsnake</a>
+		</td>
 		<td><a href="aptus://gamtex_nudoku" class="button1"><img src="images/sudoku.svg" class="appicon"><br />Nudoku</a>
 		</td>
 		<td><a href="aptus://gamtex_omega-rpg" class="button1"><img src="images/terminal.svg" class="appicon"><br />Omega RPG</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamtex_pacvim" class="button1"><img src="images1/pacman.svg" class="appicon"><br />PacVim</a>
 		</td>
-		<td><a href="aptus://gamtex_petris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Petris</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamtex_petris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Petris</a>
+		</td>
 		<td><a href="aptus://gamtex_piu-piu" class="button1"><img src="images/terminal.svg" class="appicon"><br />Piu-Piu</a>
 		</td>
 		<td><a href="aptus://gamtex_sudoku" class="button1"><img src="images/sudoku.svg" class="appicon"><br />Sudoku</a>
