--- a/6/lib/sparky-aptus-appcenter/games-tools.html
+++ b/6/lib/sparky-aptus-appcenter/games-tools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 8, 2023 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Tools | APTus AppCenter</title>
@@ -58,16 +58,18 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamtoo_gzdoom" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GZDoom</a>
 		</td>
+		<td><a href="aptus://gamtoo_heroic" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Heroic Games Launcher</a>
+		</td>
 		<td><a href="aptus://gamtoo_itch" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Itch</a>
 		</td>
 		<td><a href="aptus://gamtoo_joystick" class="button1"><img src="images/joystick.svg" class="appicon"><br />Joystick</a>
 		</td>
 		<td><a href="aptus://gamtoo_jstest-gtk" class="button1"><img src="images/joystick.svg" class="appicon"><br />Joystick Tester GTK</a>
 		</td>
-		<td><a href="aptus://gamtoo_lutris" class="button1"><img src="images/lutris.svg" class="appicon"><br />Lutris</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamtoo_lutris" class="button1"><img src="images/lutris.svg" class="appicon"><br />Lutris</a>
+		</td>
 		<td><a href="aptus://gamtoo_mupen64plus-qt" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Mupen64 Plus Qt</a>
 		</td>
 		<td><a href="aptus://gamtoo_ogamesim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Ogame Simulator</a>
@@ -78,10 +80,10 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamtoo_pgn-extract" class="button1"><img src="images/default-icon.svg" class="appicon"><br />PGN Extract</a>
 		</td>
-		<td><a href="aptus://gamtoo_pokemmo-installer" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />PokeMMO Installer</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamtoo_pokemmo-installer" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />PokeMMO Installer</a>
+		</td>
 		<td><a href="aptus://gamtoo_residualvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ResidualVM</a>
 		</td>
 		<td><a href="aptus://gamtoo_sc-controller" class="button1"><img src="images/joystick.svg" class="appicon"><br />SC Controller</a>
@@ -92,6 +94,8 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamtoo_steamtinkerlaunch" class="button1"><img src="images/steam.svg" class="appicon"><br />Steam Tinker Launch</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamtoo_xsystem35" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />XSystem35</a>
 		</td>
 	</tr>
