--- a/7/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/7/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -68,11 +68,13 @@ Last update: November 12, 2022 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
-		</td>
+		<!--<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
+		</td>-->
 		<td><a href="aptus://videdi_mystiq" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Mystiq</a>
 		</td>
 		<td><a href="aptus://videdi_nageru" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Nageru</a>
+		</td>
+		<td><a href="aptus://videdi_olive-editor" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Olive Editor</a>
 		</td>
 		<td><a href="aptus://videdi_openshot-qt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot-Qt</a>
 		</td>
