--- a/7/lib/sparky-aptus-appcenter/system-package.html
+++ b/7/lib/sparky-aptus-appcenter/system-package.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 5, 2021 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>System -> Package Management | APTus AppCenter</title>
@@ -58,16 +58,18 @@ Last update: May 5, 2021 by pavroo
 		</td>
 		<td><a href="aptus://syspac_nala" class="button1"><img src="images/deb.svg" class="appicon"><br />Nala</a>
 		</td>
+		<td><a href="aptus://syspac_nix-bin" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nix</a>
+		</td>
 		<td><a href="aptus://syspac_plasma-discover" class="button1"><img src="images/system-upgrade.svg" class="appicon">Plasma Discover<br /></a>
 		</td>
 		<td><a href="aptus://syspac_snapd" class="button1"><img src="images/container.svg" class="appicon"><br />snapd</a>
 		</td>
 		<td><a href="aptus://syspac_sparky-aptus-upgrade" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade</a>
 		</td>
-		<td><a href="aptus://syspac_sparky-aptus-upgrade-checker" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade Checker</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://syspac_sparky-aptus-upgrade-checker" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade Checker</a>
+		</td>
 		<td><a href="aptus://syspac_synaptic" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />Synaptic</a>
 		</td>
 	</tr>
