--- a/6/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/6/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 9, 2022 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -78,10 +78,12 @@ Last update: January 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://videdi_ogmrip" class="button1"><img src="images/devede.svg" class="appicon"><br />OGMRip</a>
 		</td>
-		<td><a href="aptus://videdi_openshot" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot</a>
+		<td><a href="aptus://videdi_olive-editor" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Olive Editor</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_openshot" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot</a>
+		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
 		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
@@ -92,10 +94,10 @@ Last update: January 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://videdi_shutter-encoder" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shutter Encoder</a>
 		</td>
-		<td><a href="aptus://videdi_slowmovideo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Slowmovideo</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_slowmovideo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Slowmovideo</a>
+		</td>
 		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
 		</td>
 		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
@@ -106,10 +108,10 @@ Last update: January 9, 2022 by pavroo
 		</td>
 		<td><a href="aptus://videdi_videotrans" class="button1"><img src="images/devede.svg" class="appicon"><br />Videotrans</a>
 		</td>
-		<td><a href="aptus://videdi_vqmt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />VQMT</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_vqmt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />VQMT</a>
+		</td>
 		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
 		</td>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
