--- a/7/lib/sparky-aptus-appcenter/accessories-clipboards.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-clipboards.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 10, 2021 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>Accessories -> Clipboards | APTus AppCenter</title>
@@ -46,7 +46,7 @@ Last update: October 10, 2021 by pavroo
 		</td>
 		<td><a href="aptus://acccli_diodon" class="button1"><img src="images/task.svg" class="appicon"><br />Diodon</a>
 		</td>
-		<td><a href="aptus://acccli_gpaste" class="button1"><img src="images/task.svg" class="appicon"><br />GPaste</a>
+		<td><a href="aptus://acccli_gpaste-2" class="button1"><img src="images/task.svg" class="appicon"><br />GPaste</a>
 		</td>
 		<td><a href="aptus://acccli_parcellite" class="button1"><img src="images/task.svg" class="appicon"><br />Parcellite</a>
 		</td>
