--- a/7/lib/sparky-aptus-appcenter/games-emulators.html
+++ b/7/lib/sparky-aptus-appcenter/games-emulators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: February 20, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Emulators | APTus AppCenter</title>
@@ -48,14 +48,14 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_dosemu" class="button1"><img src="images1/dosbox.svg" class="appicon"><br />DOSEMU</a>
 		</td>
-		<td><a href="aptus://gamemu_epsxe" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ePSXe</a>
-		</td>
+		<!--<td><a href="aptus://gamemu_epsxe" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ePSXe</a>
+		</td>-->
 		<td><a href="aptus://gamemu_fceux" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />FCE Ultra X</a>
+		</td>
+		<td><a href="aptus://gamemu_gnome-video-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GNOME Video Arcade</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://gamemu_gnome-video-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GNOME Video Arcade</a>
-		</td>
 		<td><a href="aptus://gamemu_hatari" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Hatari</a>
 		</td>
 		<td><a href="aptus://gamemu_kega-fusion" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Kega Fusion</a>
@@ -66,10 +66,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_mednaffe" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Mednaffe</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_mgba-qt" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />mGBA Qt</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_mgba-sdl" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />mGBA SDL</a>
 		</td>
 		<td><a href="aptus://gamemu_nestopia" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Nestopia</a>
@@ -80,10 +80,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_retroarch" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />RetroArch</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_rlvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />rlvm</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_scummvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ScummVM</a>
 		</td>
 		<td><a href="aptus://gamemu_stella" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Stella</a>
@@ -94,8 +94,6 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_yabause" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Yabause</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_zsnes" class="button1"><img src="images1/zsnes.svg" class="appicon"><br />ZSNES</a>
 		</td>
 	</tr>
