--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: March 6, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -88,14 +88,16 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://offtex_jupp" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Jupp</a>
 		</td>
+		<td><a href="aptus://offtex_kakoune" class="button1"><img src="images/terminal.svg" class="appicon"><br />Kakoune</a>
+		</td>
 		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
 		</td>
 		<td><a href="aptus://offtex_kwrite" class="button1"><img src="images/kwrite.svg" class="appicon"><br />KWrite</a>
 		</td>
-		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
+		</td>
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
 		</td>
 		<td><a href="aptus://offtex_lite-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite Editor</a>
@@ -106,10 +108,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
 		</td>
-		<td><a href="aptus://offtex_ne" class="button1"><img src="images/terminal.svg" class="appicon"><br />ne</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_ne" class="button1"><img src="images/terminal.svg" class="appicon"><br />ne</a>
+		</td>
 		<td><a href="aptus://offtex_nedit" class="button1"><img src="images/terminal.svg" class="appicon"><br />NEdit</a>
 		</td>
 		<td><a href="aptus://offtex_notepadnext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />NotepadNext</a>
@@ -120,10 +122,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
 		</td>
-		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
+		</td>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
 		</td>
 		<td><a href="aptus://offtex_tea" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tea</a>
@@ -134,10 +136,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
-		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
+		</td>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
 		</td>
 	</tr>
