--- a/6/lib/sparky-aptus-appcenter/accessories-devices.html
+++ b/6/lib/sparky-aptus-appcenter/accessories-devices.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 7, 2022 by pavroo
+Last update: March 24, 2023 by pavroo
 -->
 	<head>
 		<title>Accessories -> Devices | APTus AppCenter</title>
@@ -42,6 +42,8 @@ Last update: June 7, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://accdev_arandr" class="button1"><img src="images/display.svg" class="appicon"><br />ARandR</a>
 		</td>
+		<td><a href="aptus://accdev_blueman" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Blueman</a>
+		</td>
 		<td><a href="aptus://accdev_bluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Bluetooth</a>
 		</td>
 		<td><a href="aptus://accdev_gnome-bluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />GNOME Bluetooth</a>
@@ -50,10 +52,10 @@ Last update: June 7, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accdev_jack-keyboard" class="button1"><img src="images/default-icon.svg" class="appicon"><br />JACK Keyboard</a>
 		</td>
-		<td><a href="aptus://accdev_kdeconnect" class="button1"><img src="images/smartphone.svg" class="appicon"><br />KDE Connect</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accdev_kdeconnect" class="button1"><img src="images/smartphone.svg" class="appicon"><br />KDE Connect</a>
+		</td>
 		<td><a href="aptus://accdev_keyboard-configuration" class="button1"><img src="images/keyboard.svg" class="appicon"><br />Keyboard Configuration</a>
 		</td>
 		<td><a href="aptus://accdev_keyboards-rg" class="button1"><img src="images/keyboard.svg" class="appicon"><br />Keyboards-rg</a>
@@ -64,10 +66,10 @@ Last update: June 7, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accdev_lxrandr" class="button1"><img src="images/display.svg" class="appicon"><br />LXrandR</a>
 		</td>
-		<td><a href="aptus://accdev_magnus" class="button1"><img src="images/search.svg" class="appicon"><br />Magnus</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accdev_magnus" class="button1"><img src="images/search.svg" class="appicon"><br />Magnus</a>
+		</td>
 		<td><a href="aptus://accdev_matchbox-keyboard" class="button1"><img src="images/keyboard2.svg" class="appicon"><br />Matchbox Keyboard</a>
 		</td>
 		<td><a href="aptus://accdev_mousetweaks" class="button1"><img src="images/mouse.svg" class="appicon"><br />Mouse Tweaks</a>
@@ -78,10 +80,10 @@ Last update: June 7, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accdev_pulseaudio-module-bluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Pulseaudio Module Bluetooth</a>
 		</td>
-		<td><a href="aptus://accdev_onboard" class="button1"><img src="images/keyboard2.svg" class="appicon"><br />On-screen Keyboard</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accdev_onboard" class="button1"><img src="images/keyboard2.svg" class="appicon"><br />On-screen Keyboard</a>
+		</td>
 		<td><a href="aptus://accdev_qml-module-qtbluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Qml Module Qt Bluetooth</a>
 		</td>
 		<td><a href="aptus://accdev_sparky-libinput" class="button1"><img src="images/touchpad.svg" class="appicon"><br />Sparky Libinput</a>
