--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 6, 2023 by pavroo
+Last update: March 24, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -92,11 +92,15 @@ Last update: March 6, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_kate" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kate</a>
 		</td>
-		<td><a href="aptus://offtex_kwrite" class="button1"><img src="images/kwrite.svg" class="appicon"><br />KWrite</a>
+		<td><a href="aptus://offtex_kephra" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kephra</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_kwrite" class="button1"><img src="images/kwrite.svg" class="appicon"><br />KWrite</a>
+		</td>
 		<td><a href="aptus://offtex_le" class="button1"><img src="images/terminal.svg" class="appicon"><br />LE</a>
+		</td>
+		<td><a href="aptus://offtex_l3afpad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />L3afpad</a>
 		</td>
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
 		</td>
@@ -104,12 +108,12 @@ Last update: March 6, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_micro" class="button1"><img src="images/terminal.svg" class="appicon"><br />Micro</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_mousepad" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Mousepad</a>
 		</td>
 		<td><a href="aptus://offtex_nano" class="button1"><img src="images1/nano.svg" class="appicon"><br />Nano</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_ne" class="button1"><img src="images/terminal.svg" class="appicon"><br />ne</a>
 		</td>
 		<td><a href="aptus://offtex_nedit" class="button1"><img src="images/terminal.svg" class="appicon"><br />NEdit</a>
@@ -118,12 +122,12 @@ Last update: March 6, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_notepadqq" class="button1"><img src="images1/notepadqq.svg" class="appicon"><br />NotepadQQ</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_nvi" class="button1"><img src="images/terminal.svg" class="appicon"><br />Nvi</a>
 		</td>
 		<td><a href="aptus://offtex_pluma" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Pluma</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_scite" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Scite</a>
 		</td>
 		<td><a href="aptus://offtex_sed" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Sed</a>
@@ -132,12 +136,12 @@ Last update: March 6, 2023 by pavroo
 		</td>
 		<td><a href="aptus://offtex_vim" class="button1"><img src="images/vim.svg" class="appicon"><br />Vim</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
 		</td>
 		<td><a href="aptus://offtex_wordgrinder-x11" class="button1"><img src="images/text-editor.svg" class="appicon"><br />WordGrinder x11</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offtex_xjed" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Xjed</a>
 		</td>
 		<td><a href="aptus://offtex_zim" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Zim</a>
