--- a/6/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/6/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: April 29, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -54,8 +54,8 @@ Last update: November 12, 2022 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netweb_cyberfox" class="button1"><img src="images0/cyberfox.png" class="appicon"><br />Cyberfox</a>
-		</td>
+		<!--<td><a href="aptus://netweb_cyberfox" class="button1"><img src="images0/cyberfox.png" class="appicon"><br />Cyberfox</a>
+		</td>-->
 		<td><a href="aptus://netweb_dillo" class="button1"><img src="images0/dillo.png" class="appicon"><br />Dillo</a>
 		</td>
 		<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
@@ -66,10 +66,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_falkon" class="button1"><img src="images0/falkon.png" class="appicon"><br />Falkon</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_firefox-esr" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox ESR</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
 		</td>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
@@ -80,10 +80,10 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_iron" class="button1"><img src="images0/iron.png" class="appicon"><br />Iron</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
 		</td>
 		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
@@ -94,9 +94,11 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
 		</td>
+		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
+		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
+		<td><a href="aptus://netweb_mullvad-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mullvad Browser</a>
 		</td>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
 		</td>
