--- a/6/lib/sparky-aptus-appcenter/system-package.html
+++ b/6/lib/sparky-aptus-appcenter/system-package.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 20, 2023 by pavroo
+Last update: April 29, 2023 by pavroo
 -->
 	<head>
 		<title>System -> Package Management | APTus AppCenter</title>
@@ -40,6 +40,8 @@ Last update: February 20, 2023 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://syspac_appimagelauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />AppImage Launcher</a>
+		</td>
 		<td><a href="aptus://syspac_apt" class="button1"><img src="images/deb.svg" class="appicon"><br />APT</a>
 		</td>
 		<td><a href="aptus://syspac_aptitude" class="button1"><img src="images/deb.svg" class="appicon"><br />Aptitude</a>
@@ -50,10 +52,10 @@ Last update: February 20, 2023 by pavroo
 		</td>
 		<td><a href="aptus://syspac_flatpak" class="button1"><img src="images/container.svg" class="appicon"><br />Flatpak</a>
 		</td>
-		<td><a href="aptus://syspac_gdebi" class="button1"><img src="images/deb.svg" class="appicon"><br />GDebi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://syspac_gdebi" class="button1"><img src="images/deb.svg" class="appicon"><br />GDebi</a>
+		</td>
 		<td><a href="aptus://syspac_gnome-software" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />GNOME Software</a>
 		</td>
 		<td><a href="aptus://syspac_nala-legacy" class="button1"><img src="images/deb.svg" class="appicon"><br />Nala</a>
@@ -64,10 +66,10 @@ Last update: February 20, 2023 by pavroo
 		</td>
 		<td><a href="aptus://syspac_snapd" class="button1"><img src="images/container.svg" class="appicon"><br />snapd</a>
 		</td>
-		<td><a href="aptus://syspac_sparky-aptus-upgrade" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://syspac_sparky-aptus-upgrade" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade</a>
+		</td>
 		<td><a href="aptus://syspac_sparky-aptus-upgrade-checker" class="button1"><img src="images/system-upgrade-full.svg" class="appicon"><br />SparkyAPTus Upgrade Checker</a>
 		</td>
 		<td><a href="aptus://syspac_synaptic" class="button1"><img src="images/system-upgrade.svg" class="appicon"><br />Synaptic</a>
