--- a/6/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/6/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 20, 2023 by pavroo
+Last update: April 29, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -118,8 +118,12 @@ Last update: February 20, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
 		</td>
+		<td><a href="aptus://videdi_youtube-dl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube DL GUI</a>
+		</td>
 		<td><a href="aptus://videdi_youtubedl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTubeDL GUI</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_yt-dlp" class="button1"><img src="images/youtube.svg" class="appicon"><br />YT-DLP</a>
 		</td>
 	</tr>
