--- a/6/lib/sparky-aptus-appcenter/office-text.html
+++ b/6/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: March 24, 2023 by pavroo
+Last update: April 29, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -102,7 +102,7 @@ Last update: March 24, 2023 by pavroo
 		</td>	
 		<td><a href="aptus://offtex_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo</a>
 		</td>
-		<td><a href="aptus://offtex_lite-editor" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite Editor</a>
+		<td><a href="aptus://offtex_lite-xl" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Lite XL</a>
 		</td>
 		<td><a href="aptus://offtex_micro" class="button1"><img src="images/terminal.svg" class="appicon"><br />Micro</a>
 		</td>
