--- a/7/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 8, 2023 by pavroo
+Last update: April 29, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -64,10 +64,11 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_kodi" class="button1"><img src="images/totem.svg" class="appicon"><br />Kodi</a>
 		</td>
+		<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
+		</td>
+	
 		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
 		</td>
 		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
@@ -78,11 +79,10 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_smplayer" class="button1"><img src="images/smplayer.svg" class="appicon"><br />SMPlayer</a>
 		</td>
-
-		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
+		</td>
 		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
@@ -93,6 +93,8 @@ Last update: January 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_xine-console" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-console</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://vidpla_xine-ui" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-ui</a>
 		</td>
 	</tr>
