--- a/7/lib/sparky-aptus-appcenter/net-others.html
+++ b/7/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: April 29, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -55,6 +55,8 @@ Last update: November 12, 2022 by pavroo
 	<tr>
 	</tr>
 		<td><a href="aptus://netoth_warpinator" class="button1"><img src="images/network.svg" class="appicon"><br />Warpinator</a>
+		</td>
+		<td><a href="aptus://netoth_wike" class="button1"><img src="images/comix.svg" class="appicon"><br />Wike</a>
 		</td>
 	</tr>
 </tbody>
