--- a/7/lib/sparky-aptus-appcenter/net-communication.html
+++ b/7/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 8, 2023 by pavroo
+Last update: May 30, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -70,7 +70,7 @@ Last update: January 8, 2023 by pavroo
 	<tr>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
 		</td>
-		<td><a href="aptus://netcom_jami-all" class="button1"><img src="images/jami.svg" class="appicon"><br />Jami</a>
+		<td><a href="aptus://netcom_jami" class="button1"><img src="images/jami.svg" class="appicon"><br />Jami</a>
 		</td>
 		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
 		</td>
