--- a/7/lib/sparky-aptus-appcenter/office-suite.html
+++ b/7/lib/sparky-aptus-appcenter/office-suite.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 29, 2021 by pavroo
+Last update: May 30, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Suites | APTus AppCenter</title>
@@ -50,7 +50,7 @@ Last update: November 29, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offsui_onlyoffice-desktopeditors" class="button1"><img src="images0/onlyoffice.png" class="appicon"><br />ONLYOFFICE Desktop Editors</a>
 		</td>
-		<td><a href="aptus://offsui_openoffice" class="button1"><img src="images/word.svg" class="appicon"><br />OpenOffice.org</a>
+		<td><a href="aptus://offsui_openoffice" class="button1"><img src="images/word.svg" class="appicon"><br />OpenOffice</a>
 		</td>
 	</tr>
 	<tr>
