--- a/7/lib/sparky-aptus-appcenter/system-others.html
+++ b/7/lib/sparky-aptus-appcenter/system-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 14, 2022 by pavroo
+Last update: May 30, 2023 by pavroo
 -->
 	<head>
 		<title>System -> Others | APTus AppCenter</title>
@@ -60,6 +60,8 @@ Last update: April 14, 2022 by pavroo
 		</td>
 		<td><a href="aptus://sysoth_nvidia-settings" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvidia Settings</a>
 		</td>
+		<!--<td><a href="aptus://sysoth_scrcpy" class="button1"><img src="images/anbox.svg" class="appicon"><br />Scrcpy</a>
+		</td>-->
 		<td><a href="aptus://sysoth_sparky-eraser" class="button1"><img src="images1/bleachbit.svg" class="appicon"><br />Sparky Eraser</a>
 		</td>
 		<td><a href="aptus://sysoth_sparky-welcome" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky Welcome</a>
