--- a/7/lib/sparky-aptus-appcenter/media-others.html
+++ b/7/lib/sparky-aptus-appcenter/media-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: July 7, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Others | APTus AppCenter</title>
@@ -98,9 +98,19 @@ Last update: November 12, 2022 by pavroo
 	<tr>
 		<td><a href="aptus://medoth_musescore" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MuseScore</a>
 		</td>
+		<td><a href="aptus://medoth_pamix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pamix</a>
+		</td>
+		<td><a href="aptus://medoth_pamixer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pamixer</a>
+		</td>
+		<td><a href="aptus://medoth_pasystray" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pasystray</a>
+		</td>
 		<td><a href="aptus://medoth_pavucontrol" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pavucontrol</a>
 		</td>
 		<td><a href="aptus://medoth_peek" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />Peek</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://medoth_pnmixer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pnmixer</a>
 		</td>
 		<td><a href="aptus://medoth_performous" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Performous</a>
 		</td>
@@ -108,12 +118,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://medoth_psk31lx" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />psk31lx</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://medoth_pulseaudio-equalizer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />PulseAudio Equalizer</a>
 		</td>
 		<td><a href="aptus://medoth_pulseeffects" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />PulseEffects</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_pulsemixer" class="button1"><img src="images/terminal.svg" class="appicon"><br />PulseMixer (CLI)</a>
 		</td>
 		<td><a href="aptus://medoth_qasconfig" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qasconfig</a>
@@ -122,10 +132,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://medoth_qspeakers" class="button1"><img src="images/radio.svg" class="appicon"><br />QSpeakers</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://medoth_rakarrack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Rakarrack</a>
 		</td>
+		<td><a href="aptus://medoth_rexima" class="button1"><img src="images/terminal.svg" class="appicon"><br />Rexima</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_simplescreenrecorder" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />Simple Screen Recorder</a>
 		</td>
 		<td><a href="aptus://medoth_spek" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Spek</a>
@@ -134,10 +146,16 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://medoth_timemachine" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Time Machine</a>
 		</td>
-		<td><a href="aptus://medoth_vokoscreen-ng" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />VokoscreenNG</a>
+		<td><a href="aptus://medoth_vimix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vimix</a>
+		</td>
+		<td><a href="aptus://medoth_voctomix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Voctomix</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://medoth_vokoscreen-ng" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />VokoscreenNG</a>
+		</td>
+		<td><a href="aptus://medoth_volumeicon-alsa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Volumeicon Alsa</a>
+		</td>
 		<td><a href="aptus://medoth_wsjtx" class="button1"><img src="images/radio.svg" class="appicon"><br />WSJT-X</a>
 		</td>
 	</tr>
