--- a/8/lib/sparky-aptus-appcenter/development.html
+++ b/8/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 24, 2023 by pavroo
+Last update: September 5, 2023 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -40,8 +40,8 @@ Last update: June 24, 2023 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://devtoo_anjuta" class="button1"><img src="images/anjuta.svg" class="appicon"><br />Anjuta</a>
-		</td>
+		<!--<td><a href="aptus://devtoo_anjuta" class="button1"><img src="images/anjuta.svg" class="appicon"><br />Anjuta</a>
+		</td>-->
 		<td><a href="aptus://devtoo_arduino" class="button1"><img src="images/arduino.svg" class="appicon"><br />Arduino</a>
 		</td>
 		<td><a href="aptus://devtoo_bless" class="button1"><img src="images/text-script.svg" class="appicon"><br />Bless</a>
@@ -52,10 +52,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_bluegriffon" class="button1"><img src="images/bluegriffon.svg" class="appicon"><br />BlueGriffon</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_bpftrace" class="button1"><img src="images/default-icon.svg" class="appicon"><br />BPFtrace</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_brackets" class="button1"><img src="images/documents.svg" class="appicon"><br />Brackets</a>
 		</td>
 		<td><a href="aptus://devtoo_codeblocks" class="button1"><img src="images/codeblocks.svg" class="appicon"><br />Code::Blocks</a>
@@ -66,10 +66,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_cudatext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Cudatext</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_edi" class="button1"><img src="images/text-script.svg" class="appicon"><br />EDI</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_eflete" class="button1"><img src="images/text-script.svg" class="appicon"><br />Eflete</a>
 		</td>
 		<td><a href="aptus://devtoo_emacs-gtk" class="button1"><img src="images/emacs.svg" class="appicon"><br />Emacs GTK</a>
@@ -80,10 +80,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_erlang-observer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Erlang Observer</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_gambas3-ide" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Gambas IDE</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_geany" class="button1"><img src="images/geany.svg" class="appicon"><br />Geany</a>
 		</td>
 		<td><a href="aptus://devtoo_ghex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Ghex</a>
@@ -94,10 +94,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_git-gui" class="button1"><img src="images/git.svg" class="appicon"><br />Git GUI</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_gitkraken" class="button1"><img src="images/git.svg" class="appicon"><br />GitKraken</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_gitweb" class="button1"><img src="images/git.svg" class="appicon"><br />Git Web</a>
 		</td>
 		<td><a href="aptus://devtoo_glade" class="button1"><img src="images/glade.svg" class="appicon"><br />Glade</a>
@@ -108,10 +108,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_hexyl" class="button1"><img src="images/default-icon.svg" class="appicon"><br />hexyl</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_default-jdk" class="button1"><img src="images/java.svg" class="appicon"><br />Java Development Kit (OpenJDK)</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
 		</td>
 		<td><a href="aptus://devtoo_kdevelop" class="button1"><img src="images/kdevelop.svg" class="appicon"><br />KDevelop</a>
@@ -122,10 +122,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_latexdraw" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXDraw</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_latexila" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXila</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_latexml" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXml</a>
 		</td>
 		<td><a href="aptus://devtoo_lazarus" class="button1"><img src="images/text-script.svg" class="appicon"><br />Lazarus</a>
@@ -136,10 +136,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_meld" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Meld</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_minizinc" class="button1"><img src="images/default-icon.svg" class="appicon"><br />MiniZinc</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_mono-complete" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Mono</a>
 		</td>
 		<td><a href="aptus://devtoo_nim" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nim</a>
@@ -150,10 +150,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_perl" class="button1"><img src="images/perl.svg" class="appicon"><br />Perl</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_php" class="button1"><img src="images/php.svg" class="appicon"><br />PHP</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_pycode-browser" class="button1"><img src="images/python.svg" class="appicon"><br />PyCode Browser</a>
 		</td>
 		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
@@ -164,10 +164,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_sigil" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Sigil</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_subversion" class="button1"><img src="images1/vector.svg" class="appicon"><br />Subversion</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_texstudio" class="button1"><img src="images/tex.svg" class="appicon"><br />TeXstudio</a>
 		</td>
 		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
@@ -178,10 +178,10 @@ Last update: June 24, 2023 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_valac" class="button1"><img src="images1/vala.svg" class="appicon"><br />Vala</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_valgrind" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Valgrind</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_code" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />Visual Code Studio</a>
 		</td>
 		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />VSCodium</a>
