--- a/8/lib/sparky-aptus-appcenter/education.html
+++ b/8/lib/sparky-aptus-appcenter/education.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2023 by pavroo
+Last update: September 5, 2023 by pavroo
 -->
 	<head>
 		<title>Education/Science A-G | APTus AppCenter</title>
@@ -70,8 +70,8 @@ Last update: August 8, 2023 by pavroo
 	<tr>
 		<td><a href="aptus://educat1_carmetal" class="button1"><img src="images/glade.svg" class="appicon"><br />Carmetal</a>
 		</td>
-		<!--<td><a href="aptus://educat1_chemtool" class="button1"><img src="images/chemtool.svg" class="appicon"><br />Chemtool</a>
-		</td>-->
+		<td><a href="aptus://educat1_chemtool" class="button1"><img src="images/chemtool.svg" class="appicon"><br />Chemtool</a>
+		</td>
 		<td><a href="aptus://educat1_critterding" class="button1"><img src="images/atom.svg" class="appicon"><br />Critterding</a>
 		</td>
 		<td><a href="aptus://educat1_cura" class="button1"><img src="images/printer.svg" class="appicon"><br />Cura</a>
@@ -80,10 +80,10 @@ Last update: August 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat1_electric" class="button1"><img src="images/science.svg" class="appicon"><br />Electric</a>
 		</td>
-		<td><a href="aptus://educat1_elki" class="button1"><img src="images/text-script.svg" class="appicon"><br />ELKI</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://educat1_elki" class="button1"><img src="images/text-script.svg" class="appicon"><br />ELKI</a>
+		</td>
 		<td><a href="aptus://educat1_engauge-digitizer" class="button1"><img src="images/glade.svg" class="appicon"><br />Engauge Digitizer</a>
 		</td>
 		<td><a href="aptus://educat1_expeyes" class="button1"><img src="images/science.svg" class="appicon"><br />ExpEYES</a>
@@ -94,15 +94,13 @@ Last update: August 8, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat1_fracplanet" class="button1"><img src="images/atom.svg" class="appicon"><br />FracPlanet</a>
 		</td>
-		<td><a href="aptus://educat1_fraqtive" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Fraqtive</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://educat1_fraqtive" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Fraqtive</a>
+		</td>
 		<td><a href="aptus://educat1_gabedit" class="button1"><img src="images/science.svg" class="appicon"><br />Gabedit</a>
 		</td>
 		<td><a href="aptus://educat1_garlic" class="button1"><img src="images/atom.svg" class="appicon"><br />Garlic</a>
-		</td>
-		<td><a href="aptus://educat1_gcx" class="button1"><img src="images/preferences-system-network.svg" class="appicon"><br />Gcx</a>
 		</td>
 		<td><a href="aptus://educat1_gcompris-qt" class="button1"><img src="images/gcompris.svg" class="appicon"><br />GCompris</a>
 		</td>
