--- a/7/lib/sparky-aptus-appcenter/accessories-usb.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-usb.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 20, 2023 by pavroo
+Last update: September 5, 2023 by pavroo
 -->
 	<head>
 		<title>Accessories -> USB Management | APTus AppCenter</title>
@@ -54,6 +54,8 @@ Last update: February 20, 2023 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accusb_rpi-imager" class="button1"><img src="images/rpi.svg" class="appicon"><br />RPi Imager</a>
+		</td>
 		<td><a href="aptus://accusb_scolasync" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />ScolaSync</a>
 		</td>
 		<td><a href="aptus://accusb_sparky-live-usb-creator" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />Sparky LiveUSB Creator</a>
@@ -62,8 +64,6 @@ Last update: February 20, 2023 by pavroo
 		</td>
 		<td><a href="aptus://accusb_ventoy" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ventoy</a>
 		</td>
-		<!--<td><a href="aptus://accusb_ventoy-gui" class="button1"><img src="images/usb-creator.svg" class="appicon"><br />Ventoy GUI</a>
-		</td>-->
 		<td><a href="aptus://accusb_woeusb" class="button1"><img src="images/wine.svg" class="appicon"><br />WoeUSB</a>
 		</td>
 	</tr>
