--- a/7/lib/sparky-aptus-appcenter/games-puzzle.html
+++ b/7/lib/sparky-aptus-appcenter/games-puzzle.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 12, 2022 by pavroo
+Last update: September 5, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Puzzle | APTus AppCenter</title>
@@ -64,10 +64,14 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_brainparty" class="button1"><img src="images/tetris.svg" class="appicon"><br />Brain Party</a>
 		</td>
-		<td><a href="aptus://gampuz_connectagram" class="button1"><img src="images/tetris.svg" class="appicon"><br />Connectagram</a>
+		<td><a href="aptus://gampuz_chroma" class="button1"><img src="images/tetris.svg" class="appicon"><br />Chroma</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gampuz_chromono" class="button1"><img src="images/tetris.svg" class="appicon"><br />Chromono</a>
+		</td>
+		<td><a href="aptus://gampuz_connectagram" class="button1"><img src="images/tetris.svg" class="appicon"><br />Connectagram</a>
+		</td>
 		<td><a href="aptus://gampuz_crack-attack" class="button1"><img src="images/tetris.svg" class="appicon"><br />Crack Attack</a>
 		</td>
 		<td><a href="aptus://gampuz_einstein" class="button1"><img src="images/tetris.svg" class="appicon"><br />Einstein</a>
@@ -76,12 +80,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_fillets-ng" class="button1"><img src="images/tetris.svg" class="appicon"><br />Fish Fillets</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_flobopuyo" class="button1"><img src="images/tetris.svg" class="appicon"><br />FloboPuyo</a>
 		</td>
 		<td><a href="aptus://gampuz_four-in-a-row" class="button1"><img src="images/gnect.svg" class="appicon"><br />Four in a Row</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_freealchemist" class="button1"><img src="images/tetris.svg" class="appicon"><br />Free Alchemist</a>
 		</td>
 		<td><a href="aptus://gampuz_frozen-bubble" class="button1"><img src="images1/frozen-bubble.svg" class="appicon"><br />Frozen Bubble</a>
@@ -90,12 +94,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_gemdropx" class="button1"><img src="images/tetris.svg" class="appicon"><br />Gem Drop X</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_glpeces" class="button1"><img src="images/tetris.svg" class="appicon"><br />Glpeces</a>
 		</td>
 		<td><a href="aptus://gampuz_gmult" class="button1"><img src="images/2048.svg" class="appicon"><br />Gmult</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_gnome-2048" class="button1"><img src="images/2048.svg" class="appicon"><br />GNOME 2048</a>
 		</td>
 		<td><a href="aptus://gampuz_gnome-klotski" class="button1"><img src="images/gnome-klotski.svg" class="appicon"><br />GNOME Klotski</a>
@@ -104,12 +108,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_gnome-taquin" class="button1"><img src="images/gnome-taquin.svg" class="appicon"><br />GNOME Taquin</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_gnome-tetravex" class="button1"><img src="images/gnome-tetravex.svg" class="appicon"><br />GNOME Tetravex</a>
 		</td>
 		<td><a href="aptus://gampuz_gnurobbo" class="button1"><img src="images/tetris.svg" class="appicon"><br />GNU Robbo</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_gplanarity" class="button1"><img src="images/tetris.svg" class="appicon"><br />gPlanarity</a>
 		</td>
 		<td><a href="aptus://gampuz_groundhog" class="button1"><img src="images/tetris.svg" class="appicon"><br />Groundhog</a>
@@ -118,12 +122,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_hex-a-hop" class="button1"><img src="images/tetris.svg" class="appicon"><br />Hex-a-hop</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_hexalate" class="button1"><img src="images/tetris.svg" class="appicon"><br />Hexalate</a>
 		</td>
 		<td><a href="aptus://gampuz_hitori" class="button1"><img src="images/hitori.svg" class="appicon"><br />Hitori</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_jag" class="button1"><img src="images/tetris.svg" class="appicon"><br />Jag</a>
 		</td>
 		<td><a href="aptus://gampuz_katomic" class="button1"><img src="images/katomic.svg" class="appicon"><br />KAtomic</a>
@@ -132,12 +136,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_kblackbox" class="button1"><img src="images/tetris.svg" class="appicon"><br />KBlackBox</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_kblocks" class="button1"><img src="images/kblocks.svg" class="appicon"><br />KBlocks</a>
 		</td>
 		<td><a href="aptus://gampuz_klickety" class="button1"><img src="images/tetris.svg" class="appicon"><br />Klickety</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_klines" class="button1"><img src="images/tetris.svg" class="appicon"><br />KLines</a>
 		</td>
 		<td><a href="aptus://gampuz_kmines" class="button1"><img src="images/gnome-mines.svg" class="appicon"><br />KMines</a>
@@ -146,12 +150,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_krank" class="button1"><img src="images/tetris.svg" class="appicon"><br />Krank</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_kubrick" class="button1"><img src="images/container.svg" class="appicon"><br />Kubrick</a>
 		</td>
 		<td><a href="aptus://gampuz_lightsoff" class="button1"><img src="images/lightsoff.svg" class="appicon"><br />Lightsoff</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_lmarbles" class="button1"><img src="images/tetris.svg" class="appicon"><br />Lmarbles</a>
 		</td>
 		<td><a href="aptus://gampuz_ltris" class="button1"><img src="images/tetris.svg" class="appicon"><br />LTris</a>
@@ -160,12 +164,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_monsterz" class="button1"><img src="images/tetris.svg" class="appicon"><br />Monsterz</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_netris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Netris</a>
 		</td>
 		<td><a href="aptus://gampuz_numptyphysics" class="button1"><img src="images/krita.svg" class="appicon"><br />Numpty Physics</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_palapeli" class="button1"><img src="images/tetris.svg" class="appicon"><br />Palapeli</a>
 		</td>
 		<td><a href="aptus://gampuz_pathogen" class="button1"><img src="images/tetris.svg" class="appicon"><br />Pathogen Warrior</a>
@@ -174,12 +178,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_phlipple" class="button1"><img src="images/tetris.svg" class="appicon"><br />Phlipple</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_pipenightdreams" class="button1"><img src="images/tetris.svg" class="appicon"><br />Pipe Night Dreams</a>
 		</td>
 		<td><a href="aptus://gampuz_pipewalker" class="button1"><img src="images/tetris.svg" class="appicon"><br />PipeWalker</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_primrose" class="button1"><img src="images/tetris.svg" class="appicon"><br />Primrose</a>
 		</td>
 		<td><a href="aptus://gampuz_pushover" class="button1"><img src="images/tetris.svg" class="appicon"><br />Pushover</a>
@@ -188,12 +192,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_quadrapassel" class="button1"><img src="images/tetris.svg" class="appicon"><br />Quadrapassel</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_raincat" class="button1"><img src="images1/cat.svg" class="appicon"><br />Raincat</a>
 		</td>
 		<td><a href="aptus://gampuz_sgt-puzzles" class="button1"><img src="images/tetris.svg" class="appicon"><br />SGT Puzzles</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_stax" class="button1"><img src="images/tetris.svg" class="appicon"><br />Stax</a>
 		</td>
 		<td><a href="aptus://gampuz_swell-foop" class="button1"><img src="images/swell-foop.svg" class="appicon"><br />Swell Foop</a>
@@ -202,12 +206,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_tworld" class="button1"><img src="images/tetris.svg" class="appicon"><br />Tile World</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_vodovod" class="button1"><img src="images/tetris.svg" class="appicon"><br />Vodovod</a>
 		</td>
 		<td><a href="aptus://gampuz_wizznic" class="button1"><img src="images/tetris.svg" class="appicon"><br />Wizznic</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_xbomb" class="button1"><img src="images/gnome-mines.svg" class="appicon"><br />Xbomb</a>
 		</td>
 		<td><a href="aptus://gampuz_xbubble" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xbubble</a>
@@ -216,12 +220,12 @@ Last update: November 12, 2022 by pavroo
 		</td>
 		<td><a href="aptus://gampuz_xsok" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xsok</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampuz_xwelltris" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xwelltris</a>
 		</td>
 		<td><a href="aptus://gampuz_xye" class="button1"><img src="images/tetris.svg" class="appicon"><br />Xye</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampuz_zaz" class="button1"><img src="images1/zaz.svg" class="appicon"><br />Zaz</a>
 		</td>
 	</tr>
