--- a/7/lib/sparky-aptus-appcenter/system-backup.html
+++ b/7/lib/sparky-aptus-appcenter/system-backup.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 1, 2021 by pavroo
+Last update: September 5, 2023 by pavroo
 -->
 	<head>
 		<title>System -> Backup | APTus AppCenter</title>
@@ -74,14 +74,16 @@ Last update: August 1, 2021 by pavroo
 		</td>
 		<td><a href="aptus://sysbac_partimage-server" class="button1"><img src="images/terminal.svg" class="appicon"><br />PartImage Server</a>
 		</td>
+		<td><a href="aptus://sysbac_eggs" class="button1"><img src="images/penguin.svg" class="appicon"><br />Penguins Eggs</a>
+		</td>
 		<td><a href="aptus://sysbac_qt-fsarchiver" class="button1"><img src="images/backup.svg" class="appicon"><br />Qt FSArchiver</a>
 		</td>
 		<td><a href="aptus://sysbac_rescuezilla" class="button1"><img src="images/backup.svg" class="appicon"><br />Rescuezilla</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://sysbac_restic" class="button1"><img src="images/terminal.svg" class="appicon"><br />restic</a>
 		</td>
-	</tr>
-	<tr>	
 		<td><a href="aptus://sysbac_rsync" class="button1"><img src="images/terminal.svg" class="appicon"><br />rsync</a>
 		</td>
 		<td><a href="aptus://sysbac_sparky-backup-core" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sparky Backup Core</a>
@@ -92,6 +94,8 @@ Last update: August 1, 2021 by pavroo
 		</td>
 		<td><a href="aptus://sysbac_timeshift" class="button1"><img src="images/timeshift.svg" class="appicon"><br />Timeshift</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://sysbac_vbackup" class="button1"><img src="images/terminal.svg" class="appicon"><br />vbackup</a>
 		</td>
 	</tr>
